# docs/swagger.json
@@ -233,13 +233,6 @@
                 "summary": "MappaProgressoes handler",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "enum": [
                             "L",
                             "E",
